main functionality fixed and added
- proper audio offsets
- moving slider

bug fixes TODO:
- some audio delayed more than others (consider using setTime() proactively with slider movement
- prevent click in scrollbar from triggering slider movement
- actual audio runtime not matching up with timeline/slider

--- a/audio-mix-ui/styles.css
+++ b/audio-mix-ui/styles.css
@@ -29,13 +29,39 @@ body {
 
     isolation: isolate;
     position: relative;
-    width: 80dvw;
-    height: 40dvw;
-    /* aspect-ratio: 2 / 1; */
+    /* width: 80dvw; */
+    height: 60dvh;
+    /* height: fit-content; */
+    /* max-height: min(fit-content, 60dvh); */
+    aspect-ratio: 2 / 1;
     display: flex;
     flex-direction: column;
     background: var(--_bg-color);
     border-radius: 1rem;
+    overflow: hidden;
+}
+
+.mixer[data-state="loading"] {
+    &::before {
+        content: '';
+        z-index: 10;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border-radius: inherit;
+        backdrop-filter: blur(5px) saturate(180%);
+    }
+
+    /* &::after {
+        content: url("loading.gif");
+        z-index: 10;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        height: 20%;
+        aspect-ratio: 1;
+        transform: translate(-50%, -50%) scale(0.5);
+    } */
 }
 
 .mixer > .main-wrapper {
@@ -47,7 +73,7 @@ body {
         width: 20%;
         /* flex-basis: 20%; */
         overflow: auto;
-        resize: horizontal;
+        /* resize: horizontal; */
     }
     
     & .scroll-wrapper {
@@ -66,12 +92,12 @@ body {
     --_handle-height: calc(var(--_handle-width) / 2);
     --_handle-color: var(--color-blue);
 
-    z-index: 3;
+    z-index: 4;
     position: absolute;
     top: 0;
     /* can use percentages/relative values when .slider is a child of .track-list  */
     /* must use absolute values when .slider is a direct child of scroll-wrapper  */
-    left: 1400px;
+    /* left: 1400px; */
     width: var(--_slider-width);
     height: 100%;
     background: var(--_handle-color);
@@ -103,7 +129,8 @@ body {
 }
 
 .mixer .timeline-wrapper {
-    z-index: 2;
+    /* use z-index: 3 to cover canvas elements in shadow DOM (they must use z-index: 2 or something) */
+    z-index: 3;
     position: sticky;
     top: 0;
     background: var(--_bg-color);
@@ -114,10 +141,10 @@ body {
     & .timeline {
         --_timeline-std-height: 20px;
         display: grid;
-        grid-template-rows: calc(var(--_timeline-std-height) * 2);
+        grid-template-rows: calc(var(--_timeline-std-height) * 2 + 1rem);
         grid-template-columns: repeat(var(--_duration), var(--_timeline-width));
     }
-    
+
     & .timeline > *:not(:nth-child(5n)) {
         height: var(--_timeline-std-height);
         border-left: 1px solid hsl(from var(--_bg-color) h s calc(l * 1.1));
@@ -125,7 +152,19 @@ body {
     }
 
     & .timeline > *:nth-child(5n) {
+        position: relative;
+        height: calc(var(--_timeline-std-height) * 2);
         border-right: 2px solid hsl(from var(--_bg-color) h s calc(l * 1.5));
+    }
+
+    & .timeline > *:nth-child(5n)::before {
+        content: attr(data-value);
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        transform: translate(50%, 100%);
+        line-height: 1;
+        color: hsl(from var(--_bg-color) h s calc(l * 2));
     }
 }
 
@@ -152,7 +191,7 @@ body {
     --_color-darker: hsl(from var(--_color) h s calc(l * 0.5));
 
     position: relative;
-    width: 200px;
+    /* width: 0px; */
     height: 100%;
     color: var(--_color-lighter);
     background-color: var(--_color-darker);
